fix(sizing): explain new sizing behavior clearly (#993)
* fix(sizing): explain new sizing behavior clearly