@@ -15,20 +15,25 @@ The following Kubernetes settings can be tweaked within custom sizing.
 
 ### CPU & Memory requests/limits
 
-Container requests and limits for cpu and memory can be specified in the customSizing section of the Halyard Configuration. Note that if you specify the service name, these sizings will also be applied to any sidecars running alongside the primary container. To apply sizing to only a specfic container and not the sidecars, specify the container name instead of the service name. Please see the example for details.
+Container requests and limits for cpu and memory can be specified in the `deploymentEnvironment.customSizing` section of the halconfig file. 
 
-```
+There are two ways to specify requests and limits
+
+* _(Recommended)_ By supplying the container name, e.g. `echo:`, followed by the container requests and limits.
+
+  This sets resource configuration for the echo container in `spin-echo` service's pod only, not any sidecars
+  (e.g. the monitoring daemon).
+   
+* By supplying the service name, e.g. `spin-clouddriver:`, followed by the container requests and limits.
+
+  This sets the resource configuration for the clouddriver container as well as any sidecar containers in the
+  `spin-clouddriver` service.
+
+Here is an example of this configuration:
+
+```yaml
 deploymentEnvironment:
   customSizing:
-    # This applies sizings to the cloudriver container as well as any sidecar 
-    # containers running with clouddriver.
-    spin-clouddriver:
-      limits:
-        cpu: 1
-        memory: 1Gi
-      requests:
-        cpu: 250m
-        memory: 512Mi
     # This applies sizings to only the echo container and not to any sidecar 
     # containers running with echo.
     echo:
@@ -38,15 +43,31 @@ deploymentEnvironment:
       requests:
         cpu: 100m
         memory: 128Mi
+    # This applies sizings to the clouddriver container as well as any sidecar 
+    # containers running with clouddriver.
+    spin-clouddriver:
+      limits:
+        cpu: 1
+        memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 512Mi
 ```
 
 Limits and requests follow the Kubernetes conventions [documented here](https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/).
 
 #### Updating JAVA_OPTS
 
-The shaping of the pods via request and limits will not cap the java processes for the Spinnaker microservice. This can be achieved by using the `env` key in [service-settings](/reference/halyard/custom/#tweakable-service-settings).
+As of Halyard 1.8, all JVM-based services have the following JAVA_OPTS set:
 
-In general, the `-Xms` will follow 80%-90% of the requests memory allotment and `-Xmx` will follow 80-90% of the limits memory allotment. For the clouddriver example above, the `env` key is as follows:
+```
+JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2
+```
+
+This sets the JVM's heap size to half the memory allocated per container. This can be overriden by specifying your own `JAVA_OPTS` 
+using the `env` key in [service-settings](/reference/halyard/custom/#tweakable-service-settings).
+
+As a starting point, the `-Xms` can be set to 80%-90% of the requests memory allotment and `-Xmx` can be set to 80-90% of the limits memory allotment. For the clouddriver example above, the `env` key is as follows:
 
 ```
 env:
